tests/ui/errors/literal_tuple.rs
use leptos_mview::view;

fn main() {
    view! {
        span attr=(a, b);
    };
}
