tests/ui/errors/literal_tuple.stderr
error: unexpected token
 --> tests/ui/errors/literal_tuple.rs:5:21
  |
5 |         span attr=(a, b);
  |                     ^
  |
  = note: if trying to pass a tuple, wrap it in additional braces or parens. e.g. ((a, b)) or {(a, b)}.
